--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MLS备忘录</title>
+    <title>Notes</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description">
     <meta name="viewport"
@@ -21,7 +21,7 @@
     <script>
         window.$docsify = {
             // 项目名称
-            name: 'MLS备忘录',
+            name: 'Notes',
             // 仓库地址，点击右上角的Github章鱼猫头像会跳转到此地址
             repo: 'https://m.maluanshan.top',
             // 侧边栏支持，默认加载的是项目根目录下的_sidebar.md文件
