--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             // 侧边栏支持，默认加载的是项目根目录下的_sidebar.md文件
             loadSidebar: false,
             // 导航栏支持，默认加载的是项目根目录下的_navbar.md文件
-            loadNavbar: false,
+            loadNavbar: true,
             // 封面支持，默认加载的是项目根目录下的_coverpage.md文件
             coverpage: false,
             // 最大支持渲染的标题层级
