--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 <body>
     <!-- 定义加载时候的动作 -->
     <div id="app">加载中...</div>
+    <nav>
+    <a href="https://c.maluanshan.top">ownCLoud</a>
+    <a href="https://m.maluanshan.top">Memos</a>
+    <a href="https://s.maluanshan.top">Notes</a>
+    </nav>
     <script>
         window.$docsify = {
             // 项目名称
@@ -65,11 +70,7 @@
     <!--在所有的代码块上添加一个简单的Click to copy按钮来允许用户从你的文档中轻易地复制代码-->
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
     
-<nav>
-    <a href="#/">首页</a>
-    <a href="#/docs/zh-cn/">中文</a>
-    <a href="#/docs/en/">EN</a>
-</nav>
+
 
 </body>
 
